# libappindicator-zbus

./: Cargo.toml  README.md  test.txt
examples/: base.rs  pixmap.rs
src/: dbusmenu.rs  lib.rs  status_notifier_item.rs  status_notifier_watcher.rs  tray.rs
src/dbusmenu/: event_types.rs
