[package]
name = "libappindicator-zbus"
version = "0.1.1"
edition = "2024"
authors = ["Decodertalkers"]
description = "zbus implement for libappindicator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Decodetalkers/libappindicator-zbus"
keywords = ["linux", "gui"]

[dependencies]
serde = "1.0.226"
serde_repr = "0.1.20"
zbus = "5.11.0"

[dev-dependencies]
image = "0.25.8"
tokio = { version = "1.47.1", features = ["full"] }
